Fix issue with text wrapping

--- a/assets/css/shortcodes/chargewp-classic-horizontal-timeline/element.css
+++ b/assets/css/shortcodes/chargewp-classic-horizontal-timeline/element.css
@@ -50,4 +50,5 @@
     font-size: 12px;
     font-weight: bold;
     margin-bottom: 5px;
+    overflow-wrap: break-word;
 }
